# rc_car_project

./: .gitignore  CMakeLists.txt  HOG.py  README.md  download_model.py  face_detec.py  media.py  mediaOptimized.py  requirements.txt  tempCodeRunnerFile.py  test_face.py  upperbody.py  venv_command.txt
Marchemollw_Cannon/: Cannon_pipe.py  Marshmellow_Cannon.py
Marchemollw_Cannon/RnD_stuff/: adaptative_prop.py
Obj_detection/: Coordinat_out.py  depth.py  depth_acc.py  get_screen_coordinate.py  google_mediapipe.py  pi_workiing_face_coordinate.py  tempCodeRunnerFile.py  test_camera.py  test_face.py
Obj_detection/RnD_stuff/: down_model.py
PoseTracking/: main.py  test.py  turret.py  utils.py
Rpie_rc_car/nrf2401/: lib_nrf.py
arm/: Cannon_pipe.py  MIL_tracker.py  Marshmellow_Cannon.py  adaptative_prop.py  arm_ctr.py  cascade_tracker.py  mathys_tracker.py  servo_ctr.py  turret.py
arm/RnD_stuff/: arm_ctr.py  servo_ctr.py  turret.py
face_tracking/: MIL_tracker.py  MobileNet_SSD.py  Pi_rc_turret_HC_face_tracker.py  edges.py  explanation.txt  facetracker.py  rc_turret_HC_face_tracker.py  try2.py  turrent_tracking.py  turret.py
models--arnabdhar--YOLOv8-Face-Detection/refs/: main
rc_car/: main.py  motor_driver.py  test_ps4.py
rc_car/nrf2401/: lib_nrf.py  nrf_test.py
rc_car_ctr(main)/: rx_main.ino  tx_main.ino  withservo.ino
remote/: RX_joystick.ino  nrf24_ex_RX.ino  nrf24_ex_tx.ino  packet.ino  test_motor.ino  test_motor_BLE_app.ino  transmitter_package.ino  tx.ino  tx_joy1.ino
remote_test/: Ethan_Steering.ino  RX_joystick_ack.ino  tx_joy1_ack.ino
(+7 files in other folders)
